# tauri_altmediaplayer

./: .gitignore  package.json  tsconfig.json  vite.config.ts
src/: common.css  constants.ts  ipc.ts  path.ts  shortcut.ts  types.d.ts  window.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: click.rs  clickthru.rs  main.rs
src-tauri/src/util/: ffmpeg.rs  forward.rs  mod.rs
src/convert/: convert.html  convert.ts
src/main/: config.ts  helper.ts  manager.ts  util.ts
src/menu/: builder.ts  contextmenu.css  contextmenu.ts  menu.css  menu.html  menu.ts
src/player/: player.css  player.html  player.ts
src/playlist/: playlist.html  playlist.ts
